--- a/templates/summary.html
+++ b/templates/summary.html
@@ -8,28 +8,41 @@
 <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-<div class="container">
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Text Summarization</h1>
-          <p class="lead">provides best summarizatyion</p>
-        </div>
+  <div class="container">
+      <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+              <h1 class="display-4 heading">Text Summarization</h1>
+              <p class="lead">provides best summarization</p>
+          </div>
       </div>
-</div>
-    
+  </div>
 
-<div class="container" style="display: flex; justify-content:space-around">
-   <p class="original_title col-sm-4"> Original Text</p>
-   <p class="summary_title col-sm-4">Summary</p>
-</div>
+  <div class="container" style="display: flex; justify-content:space-around">
+      <p class="original_title col-sm-4"> Original Text</p>
+      <p class="summary_title col-sm-4">Summary ({{ len_summary }}%):</p> 
+  </div>
 
+  <div class="container dis">
+      <p class="originaltxt col-sm-6">{{ original_txt }}</p>
+      <div class="container col-sm-6">
+          <p class="summarytxt col-sm-6">{{ summary }}</p>
+          <button class="btn btn-success" type="submit" style="margin-left:20px;">
+              Words: {{ len_summary }}
+          </button>
+      </div>
+  </div>
 
-<div class="container dis">
-    <p class="originaltxt col-sm-6">{{original_txt}}</p>
-    <p class="summarytxt col-sm-6">{{summary}}</p>
-</div>
+  <div class="container">
+      <button class="btn btn-primary" type="submit" value="submit">
+          Words: {{ len_orig_txt }}
+      </button>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+          integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+          integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+          crossorigin="anonymous"></script>
 </body>
 </html>
