--- a/templates/summary.html
+++ b/templates/summary.html
@@ -19,7 +19,7 @@
 
   <div class="container" style="display: flex; justify-content:space-around">
       <p class="original_title col-sm-4"> Original Text</p>
-      <p class="summary_title col-sm-4">Summary ({{ len_summary }}%):</p> 
+      <p class="summary_title col-sm-4">Summary ({{ len_summary }} words):</p> 
   </div>
 
   <div class="container dis">
