--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,7 @@ padding:20px;
     justify-content: center;
 }
 
-.submitBtn{
+ .submitBtn{
     margin-top:10px;
 }
 
@@ -55,16 +55,11 @@ padding:20px;
 .search-container {
     display: flex;
     flex-direction: column;
-    max-width: 400px; /* Set a maximum width if needed */
+    max-width: 400px; 
 }
 
 
 
-.search-button {
-    background-color: #4CAF50; /* Green background color */
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+
+
+
