--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
 </div>
 <div class="footer">
-    <p>&copy; 2023 Text Summarizer. All rights reserved.</p>
+    <p>&copy; 2023 Text Summarizer. Kathford college.</p>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
